chore: add seo builder

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -4,5 +4,5 @@
 @tailwind utilities;
 
 html, body {
-  @apply dark:bg-black dark:text-white;
+  @apply dark:bg-black dark:text-white h-screen w-screen;
 }
