feat: add work sections

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -20,7 +20,7 @@
 
 html,
 body {
-	@apply dark:bg-black dark:text-white;
+	@apply bg-zinc-300 text-zinc-700;
 }
 
 html.lenis {
@@ -47,7 +47,7 @@ html.lenis {
 	@apply animate-pulse flex flex-col gap-2 items-center;
 	
 	&:after {
-		@apply bg-white transition-all delay-300;
+		@apply bg-black transition-all delay-300;
 		content: "";
 		height: 3em;
 		width: 2%;
