--- a/src/app.postcss
+++ b/src/app.postcss
@@ -47,7 +47,7 @@ html.lenis {
 	@apply animate-pulse flex flex-col gap-2 items-center;
 	
 	&:after {
-		@apply bg-black transition-all delay-300;
+		@apply bg-zinc-400 transition-all delay-300;
 		content: "";
 		height: 3em;
 		width: 2%;
