--- a/src/app.postcss
+++ b/src/app.postcss
@@ -20,7 +20,8 @@
 
 html,
 body {
-	@apply bg-zinc-300 text-zinc-700;
+	@apply bg-zinc-300 text-zinc-700 bg-fixed;
+	background-image: url('/noise.svg');
 }
 
 html.lenis {
