fix: minor tweaks

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -18,9 +18,8 @@
 	}
 }
 
-html,
 body {
-	@apply bg-zinc-300 text-zinc-700 bg-fixed;
+	@apply bg-slate-200 text-slate-700 bg-fixed;;
 	background-image: url('/noise.svg');
 }
 
@@ -48,7 +47,7 @@ html.lenis {
 	@apply animate-pulse flex flex-col gap-2 items-center;
 	
 	&:after {
-		@apply bg-zinc-400 transition-all delay-300;
+		@apply bg-slate-400 transition-all delay-300;
 		content: "";
 		height: 3em;
 		width: 2%;
