--- a/src/app.postcss
+++ b/src/app.postcss
@@ -18,9 +18,43 @@
 	}
 }
 
+@media (prefers-reduced-motion) {
+	::view-transition-group(*),
+	::view-transition-old(*),
+	::view-transition-new(*) {
+		animation: none !important;
+	}
+}
+
+::view-transition-old(project-desc) {
+	animation: 90ms cubic-bezier(0.075, 0.82, 0.165, 1) both fade-out,
+		300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-down;
+}
+
+::view-transition-new(project-desc) {
+	animation: 210ms cubic-bezier(0.075, 0.82, 0.165, 1) both fade-in,
+		300ms cubic-bezier(0.4, 0, 0.2, 1) both down-slide;
+}
+
+@keyframes fade-out {
+	to { opacity: 0;}
+}
+
+@keyframes fade-in {
+	from { opacity: 0; }
+}
+
+@keyframes down-slide {
+	from { translate: -10%; }
+}
+
+@keyframes slide-down {
+	to { translate: 10%; }
+}
+
 body {
-	@apply bg-slate-200 text-slate-700 bg-fixed;;
-	background-image: url('/noise.svg');
+	@apply bg-slate-200 text-slate-700 bg-fixed;
+	text-shadow: 0 0 20px #efefef75;
 }
 
 html.lenis {
@@ -88,11 +122,13 @@ html.lenis {
 }
 
 ::-webkit-scrollbar-track {
-	background-image: url('/noise.svg');
+	background: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
 	@apply bg-slate-700 rounded-lg bg-opacity-50;
 }
 
-
+* {
+	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+}
