--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,20 +1,65 @@
 @import url("https://api.fontshare.com/v2/css?f[]=red-hat-display@401,800,900,901,301,300,801,400,500,600&display=swap");
 
-/* Write your global styles here, in PostCSS syntax */
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+:root {
+	--color-primary: rgb(226 232 240);
+	--color-primary-content: rgb(39 39 42);
+	--color-secondary: rgb(30 41 59);
+	--color-secondary-content: rgb(113 113 122);
+	--color-error: rgb(248 113 113);
+	--color-social: rgb(71 85 105 / 0.1);
 
-@layer base {
-	.min-h-dyn {
-		min-height: 100dvh;
+	--transition-duration: 150ms;
+	--transition-timing: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@layer reset {
+	*, *::before, *::after {
+    box-sizing: border-box;
+		margin: 0;
+		padding: 0;
 	}
-	.h-dyn-screen {
-		height: 100dvh;
+}
+
+@layer utilities {
+	.col {
+		display: flex;
+		flex-direction: column;
 	}
 
-	.w-dyn-screen {
-		width: 100dvw;
+	.icon {
+		width: 1.5rem;
+		height: 1.5rem;
+	}
+	
+	.fill {
+		fill: currentColor;
+	}
+
+	.iconl {
+		width: 2rem;
+		height: 2rem;
+	}
+
+	.gap {
+		gap: 1rem;
+	}
+
+	.wf {
+		width: 100%;
+	}
+
+	.full {
+		width: 100%;
+		height: 100%;
+	}
+
+	.grid-center {
+		display: grid;
+		place-items: center;
+	}
+
+	.contents {
+		display: contents;
 	}
 }
 
@@ -52,53 +97,22 @@
 	to { translate: 10%; }
 }
 
+html {
+	-webkit-text-size-adjust: 100%;
+	-moz-tab-size: 4;
+	-o-tab-size: 4;
+	tab-size: 4;
+	font-feature-settings: normal;
+	font-variation-settings: normal;
+	font-family: Red Hat Display,sans-serif;
+	line-height: 1.5
+}
+
 body {
-	@apply bg-slate-200 text-slate-700 bg-fixed;
+	background-color: var(--color-primary);
+	color: var(--color-primary-content);
+	background-attachment: fixed;
 	text-shadow: 0 0 20px #efefef75;
-}
-
-html.lenis {
-  height: auto;
-	width: 100dvw;
-	overflow-x: hidden;
-	scrollbar-gutter: stable;
-	scrollbar-color: #6969dd #e5e5e5;
-}
-
-.lenis.lenis-smooth {
-  scroll-behavior: auto;
-}
-
-.lenis.lenis-smooth [data-lenis-prevent] {
-  overscroll-behavior: contain;
-}
-
-.lenis.lenis-stopped {
-  overflow: hidden;
-}
-
-.lenis.lenis-scrolling iframe {
-  pointer-events: none;
-}
-
-.scroll-indicator {
-	@apply animate-pulse flex flex-col gap-2 items-center;
-	
-	&:after {
-		@apply bg-slate-400 transition-all delay-300;
-		content: "";
-		height: 3em;
-		width: 2%;
-	}
-}
-
-.lenis-scrolling .scroll-indicator {
-	@apply animate-none;
-
-	&:after {
-		@apply delay-0;
-		height: 1em;
-	}
 }
 
 .gradient-text {
@@ -127,7 +141,9 @@ html.lenis {
 }
 
 ::-webkit-scrollbar-thumb {
-	@apply bg-slate-700 rounded bg-opacity-50;
+	background-color: var(--color-secondary-content);
+	opacity: 0.5;
+	border-radius: 0.25rem;
 }
 
 * {
@@ -135,7 +151,7 @@ html.lenis {
 }
 
 img {
-	@apply rounded-md;
+	border-radius: 0.375rem;
 }
 
 :root:has(dialog[open]) {
