--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,15 +1,16 @@
 @import url("https://api.fontshare.com/v2/css?f[]=red-hat-display@401,800,900,901,301,300,801,400,500,600&display=swap");
 
 :root {
-	--color-primary: #393E46;
-	--color-secondary: #4A4B4DC3;
-	--color-accent: #00ADB5;
-	--color-bg-primary: #EEEEEE;
-	--color-bg-secondary: #AAD8D3;
+	--color-main: #F22233;
+	--color-secondary: #A61723;
+	--color-accent: #80E7F2;
+	--color-bg-primary: #0A0B0D;
+	--color-bg-secondary: #393E46;
+	--color-white: #c8d2dc;
 
 	--color-error: rgb(248 113 113);
 	--color-social: rgb(71 85 105 / 0.1);
-	--gradient-background: url(/gradient.webp);
+	--gradient-background: url(https://media2.giphy.com/media/3oz8xus1ykCFgxW2ac/giphy.gif);
 	--transition-duration: 150ms;
 	--transition-timing: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -113,7 +114,7 @@ html {
 
 body {
 	background-color: var(--color-bg-primary);
-	color: var(--color-primary);
+	color: var(--color-white);
 }
 
 ::-webkit-scrollbar {
@@ -132,7 +133,7 @@ body {
 }
 
 * {
-	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+	text-shadow: 0 1px 2px #DBDCE842;
 }
 
 img {
