--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,9 +1,9 @@
 @import url("https://api.fontshare.com/v2/css?f[]=red-hat-display@401,800,900,901,301,300,801,400,500,600&display=swap");
 
 :root {
-	--color-main: #F22233;
-	--color-secondary: #A61723;
-	--color-accent: #80E7F2;
+	--color-main: #05F2F2;
+	--color-secondary: #214DA6;
+	--color-accent: #23468C;
 	--color-bg-primary: #0A0B0D;
 	--color-bg-secondary: #393E46;
 	--color-white: #c8d2dc;
@@ -21,6 +21,9 @@
 		margin: 0;
 		padding: 0;
 		min-width: 0;
+	}
+	a, a:visited, a:hover, a:active {
+		color: inherit;
 	}
 }
 
