--- a/src/app.postcss
+++ b/src/app.postcss
@@ -155,7 +155,7 @@ picture {
 	display: contents;
 }
 
-.gradient-text>span {
+.gradient-text>span, .gradient {
 	background: var(--gradient-background);
 	background-position-x: 0%;
 	background-position-y: 0%;
