--- a/src/app.postcss
+++ b/src/app.postcss
@@ -1,4 +1,4 @@
-@import url("https://api.fontshare.com/v2/css?f[]=red-hat-display@401,800,900,901,301,300,801,400,500,600&display=swap");
+@import url("https://api.fontshare.com/v2/css?f[]=archivo@401,800,900,901,301,300,801,400,500,600&display=swap");
 
 :root {
 	--color-main: #05F2F2;
@@ -114,7 +114,7 @@ html {
 	tab-size: 4;
 	font-feature-settings: normal;
 	font-variation-settings: normal;
-	font-family: Red Hat Display,sans-serif;
+	font-family: Archivo,sans-serif;
 	line-height: 1.5
 }
 
@@ -158,7 +158,7 @@ picture {
 	display: contents;
 }
 
-.gradient-text>span {
+.gradient-text {
 	background: url(/gradient.webp);
 	background-position-x: 0%;
 	background-position-y: 0%;
