--- a/src/app.postcss
+++ b/src/app.postcss
@@ -81,6 +81,16 @@
 	}
 }
 
+::view-transition-old(root) {
+	animation: 210ms cubic-bezier(0.075, 0.82, 0.165, 1) both fade-out,
+		200ms cubic-bezier(0.4, 0, 0.2, 1) both scale-up;
+}
+
+::view-transition-new(root) {
+	animation: 210ms cubic-bezier(0.075, 0.82, 0.165, 1) both fade-in,
+		200ms cubic-bezier(0.4, 0, 0.2, 1) both scale-down;
+}
+
 ::view-transition-old(project-desc) {
 	animation: 90ms cubic-bezier(0.075, 0.82, 0.165, 1) both fade-out,
 		300ms cubic-bezier(0.4, 0, 0.2, 1) both slide-down;
@@ -105,6 +115,14 @@
 
 @keyframes slide-down {
 	to { translate: 10%; }
+}
+
+@keyframes scale-up {
+	to { scale: 1.1;}
+}
+
+@keyframes scale-down {
+	from { scale: 0.9; }
 }
 
 html {
