--- a/src/app.postcss
+++ b/src/app.postcss
@@ -125,6 +125,17 @@
 	from { scale: 0.9; }
 }
 
+@keyframes slide-up {
+	from { translate: 0 10%; }
+}
+
+.fade {
+	animation: fade-in 200ms cubic-bezier(0.4, 0, 0.2, 1) both,
+		         slide-up 200ms cubic-bezier(0.4, 0, 0.2, 1) both;
+
+	animation-delay: var(--delay);
+}
+
 html {
 	-webkit-text-size-adjust: 100%;
 	-moz-tab-size: 4;
@@ -188,3 +199,4 @@ picture {
 	background-position: center;
 	text-shadow: none;
 }
+
