--- a/src/app.postcss
+++ b/src/app.postcss
@@ -101,6 +101,15 @@
 		300ms cubic-bezier(0.4, 0, 0.2, 1) both down-slide;
 }
 
+
+:global(html>canvas) {
+	view-transition-name: blobity;
+}
+
+::view-transition-group(blobity) {
+	animation: none;
+}
+
 @keyframes fade-out {
 	to { opacity: 0;}
 }
